--- a/templates/users/staticpages/confidentiality.phtml
+++ b/templates/users/staticpages/confidentiality.phtml
@@ -1,1 +1,51 @@
-<h2>Confidentiality</h2>
+<main>
+    <h2>Privacy Policy for Farming Companion</h2>
+    <section>
+        <h3>Information collection</h3>
+        <p>
+            We collect personal information solely for the purpose of providing progress tracking features for the game Stardew Valley. The information we may collect includes your Stardew Valley username, your email address (if you choose to provide it), and game progress data that you choose to share.
+        </p>
+    </section>
+    <section>
+        <h3>Use of information</h3>
+        <p>
+            The information we collect is used exclusively to enhance your experience on Farming Companion. This may include content personalization, providing relevant updates about Stardew Valley, and improving our services based on your feedback and needs.
+        </p>
+    </section>
+    <section>
+        <h3>Data security</h3>
+        <p>
+            We take appropriate security measures to protect your personal information. However, please note that no method of online data transmission or storage is entirely secure, and we cannot guarantee absolute security for your information.
+        </p>
+    </section>
+    <section>
+        <h3>Information sharing</h3>
+        <p>
+            We do not share your personal information with third parties without your explicit consent. Your Stardew Valley progress data will never be sold or shared for commercial purposes.
+        </p>
+    </section>
+    <section>
+        <h3>Links to third-party websites</h3>
+        <p>
+            Farming Companion may contain links to third-party websites. We are not responsible for the privacy practices of these sites and encourage you to read their privacy policies when visiting them.
+        </p>
+    </section>
+    <section>
+        <h3>Privacy rights</h3>
+        <p>
+        You have the right to request access to, correct, delete, or restrict the processing of your personal data. To exercise these rights or ask questions about our privacy policy, please contact us at <a href="mailto:marie.richir35@gmail.com">this email</a>.
+        </p>
+    </section>
+    <section>
+        <h3>Changes to the Privacy Policy</h3>
+        <p>
+            We reserve the right to modify this privacy policy at any time. Changes will be posted on this page, and the revision date at the top of the page will be updated accordingly.
+        </p>
+    </section>
+    <p>
+        By using Farming Companion, you agree to the terms of this privacy policy. If you do not agree with these terms, please do not use the site.
+    </p>
+    <p>
+        This privacy policy was last updated on the 26th of September 2023.
+    </p>
+</main>
