--- a/templates/users/staticpages/credits.phtml
+++ b/templates/users/staticpages/credits.phtml
@@ -1,2 +1,16 @@
-<h2>Credits</h2>
-<!-- Credit ConcernedApe and the wiki associated to Stardew Valley -->
+<main>
+    <!-- Credit ConcernedApe and the wiki associated to Stardew Valley -->
+    <h2>Credits</h2>
+    <section>
+        <h3>Legal credits for Stardew Valley</h3>
+        <p>Stardew Valley is a video game developed by: Eric "ConcernedApe" Barone.</p>
+    </section>
+    <section>
+        <h3 class="hidden">Credits</h3>
+        <p>All copyright, intellectual property rights, and related rights concerning Stardew Valley, including but not limited to copyright, trademarks, and game design rights, are the exclusive property of Eric Barone.</p>
+        <p>This website, Farming Companion, is not affiliated with ConcernedApe or any other party involved in the development or distribution of Stardew Valley. This website is created and maintained by Marie Richir for the sole purpose of providing information and progress tracking for the Stardew Valley gaming community.</p>
+        <p>Any use of names, trademarks, images, or other elements related to Stardew Valley on this website is done for informational and educational purposes, in accordance with applicable copyright and trademark law provisions. There is no intention of intentional violation or unauthorized appropriation of ConcernedApe's rights.</p>
+        <p>If you have any questions or concerns regarding this website or its content, please contact me at <a href="mailto:marie.richir35@gmail.com">this email</a>.</p>
+        <p>Stardew Valley is a registered trademark of Eric "ConcernedApe" Barone. All rights reserved.</p>
+    </section>
+</main>
