--- a/templates/users/user/game_partials/_bundles.phtml
+++ b/templates/users/user/game_partials/_bundles.phtml
@@ -10,7 +10,7 @@
                 {
             ?>
             <li>
-                <img src="/res04-projet-soutenance/assets/images/<?= $bundle->getBundleName(); ?>" alt="Picture of a bundle" />
+                <img src="/res04-projet-soutenance/assets/images/<?= $bundle->getBundleName(); ?>.png" alt="Picture of a bundle" />
                 <p><?=$bundle->getBundleName();?>: 
                 <?php 
                     if($bundle->getComplete() === true)
