--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -1,14 +1,18 @@
 @charset "UTF-8";
+/**** SCCS FOR THE HEADER ****/
 header {
   display: grid;
   grid-template-columns: 17.5vw 65vw auto;
   max-width: 100vw;
   background-color: #4361EE;
+  padding: 2rem 2.5rem;
+  box-shadow: 0px 4px 25px 2px rgba(0, 0, 0, 0.4);
+  position: relative;
+  z-index: 1;
 }
 header img {
   grid-area: 1/1/2/2;
   width: 16rem;
-  padding: 2rem 1rem;
 }
 header nav {
   grid-area: 1/2/2/3;
@@ -17,7 +21,6 @@ header nav {
 header nav ul {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
 }
 header nav ul li a {
   font-size: 1.1rem;
@@ -60,9 +63,10 @@ header nav ul li form input:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 1.5rem 0;
   }
-  header img {
-    padding: 1rem 0;
+  header nav {
+    padding-top: 1rem;
   }
   header nav ul li {
     padding: 0 1.5rem;
@@ -74,24 +78,41 @@ header nav ul li form input:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 1rem 0;
   }
-  header img {
-    padding-top: 0.8rem;
-    padding-bottom: 0.4rem;
+  header nav {
+    padding-top: 1rem;
   }
   header nav ul {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   header nav ul li {
     padding: 0.4rem 0;
   }
 }
+/**** MEDIA QUERIES FOR SMALLER LAPTOPS ****/
+@media only screen and (min-width: 993px) and (max-width: 1200px) {
+  header {
+    grid-template-columns: repeat(2, auto);
+  }
+  header img {
+    grid-area: 1/1/2/2;
+  }
+  header nav {
+    grid-area: 1/2/2/3;
+  }
+  header nav ul {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+/**** SCCS FOR THE FOOTER ****/
 footer {
   background-color: #4361EE;
-}
-footer nav {
-  padding: 0.8rem 0;
+  padding: 1rem 0;
+  box-shadow: 0px 0px 25px 2px rgba(0, 0, 0, 0.4);
 }
 footer nav ul {
   display: flex;
@@ -117,7 +138,6 @@ footer nav ul li a {
   display: grid;
   grid-template-columns: repeat(2, auto);
   grid-template-rows: repeat(3, auto);
-  padding: 1rem 0;
 }
 .homepage section.presentation h2 {
   grid-area: 1/1/2/3;
@@ -152,6 +172,14 @@ footer nav ul li a {
   padding: 0.2rem;
 }
 
+/**** MEDIA QUERIES FOR SMARTPHONES ****/
+@media only screen and (max-width: 767px) {
+  .homepage section.presentation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 /**** CSS of index Villagers ****/
 .all-villagers {
   background-color: #FAFAFA;
@@ -523,10 +551,13 @@ footer nav ul li a {
   color: #0C092B;
 }
 
+/**** SCSS FOR THE ACCOUNT PAGE ****/
 .account {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, auto);
+  padding: 1rem;
+  border: 2px dashed #D61E92;
 }
 .account h3 {
   grid-area: 1/1/2/3;
@@ -534,18 +565,22 @@ footer nav ul li a {
 .account dl {
   grid-area: 2/1/4/2;
 }
+.account dl dt {
+  font-weight: bolder;
+  font-size: 1.1rem;
+}
 .account a {
-  text-align: center;
-  color: #0C092B;
-  background-color: #0CC09E;
-  padding: 0.5rem 1rem;
-  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
   width: -moz-fit-content;
   width: fit-content;
   height: -moz-fit-content;
   height: fit-content;
   align-self: center;
+  justify-self: center;
+  color: #0C092B;
+  background-color: #0CC09E;
+  padding: 0.5rem 1rem;
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
 }
 .account a:first-of-type {
   grid-area: 2/2/3/3;
@@ -862,6 +897,6 @@ html body table {
   html body main {
     max-width: 100%;
     box-shadow: none;
-    padding: 0.6rem;
+    padding: 1.6rem 0.6rem;
   }
 }/*# sourceMappingURL=style.css.map */
