--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -119,7 +119,7 @@ html {
             main {
                 max-width: 100%;
                 box-shadow: none;
-                padding: .6rem;
+                padding: 1.6rem .6rem;
             }
         }
     }
