--- a/assets/styles/scss/users/_homepage.scss
+++ b/assets/styles/scss/users/_homepage.scss
@@ -5,7 +5,6 @@
             display:grid;
             grid-template-columns: repeat(2, auto);
             grid-template-rows: repeat(3, auto);
-            padding: 1rem 0;
         
             h2 {
                 grid-area: 1/1/2/3;
@@ -48,6 +47,19 @@
             word-wrap: break-word;
             background-color: rgba(12,192,158, .4);
             padding: .2rem;
+        }
+    }
+}
+
+/**** MEDIA QUERIES FOR SMARTPHONES ****/
+@media only screen and (max-width: 767px) {
+    .homepage {
+        section {
+            &.presentation {
+                display:flex;
+                flex-direction: column;
+                align-items: center;
+            }
         }
     }
 }
