--- a/assets/styles/scss/users/partials/_footer.scss
+++ b/assets/styles/scss/users/partials/_footer.scss
@@ -1,9 +1,11 @@
+/**** SCCS FOR THE FOOTER ****/
+
 footer {
     background-color: $blue;
+    padding: 1rem 0;
+    box-shadow: 0px 0px 25px 2px rgba(0, 0, 0, 0.4);
 
     nav {
-        padding: .8rem 0;
-
         ul {
             display:flex;
             justify-content: space-evenly;
