--- a/assets/styles/scss/users/partials/_header.scss
+++ b/assets/styles/scss/users/partials/_header.scss
@@ -1,13 +1,18 @@
+/**** SCCS FOR THE HEADER ****/
+
 header {
     display:grid;
     grid-template-columns: 17.5vw 65vw auto;
     max-width: 100vw;
     background-color:$blue;
+    padding: 2rem 2.5rem;
+    box-shadow: 0px 4px 25px 2px rgba(0, 0, 0, 0.4);
+    position:relative;
+    z-index: 1; // To let the box-shadow go on top of the main
 
     img {
         grid-area: 1/1/2/2;
         width: 16rem;
-        padding: 2rem 1rem;
     }
 
     nav {
@@ -17,7 +22,6 @@ header {
         ul {
             display:flex;
             justify-content: space-evenly;
-            align-items:center;
 
             li {
 
@@ -70,12 +74,11 @@ header {
         display: flex;
         flex-direction: column;
         align-items:center;
-
-        img {
-            padding: 1rem 0;
-        }
+        padding: 1.5rem 0;
 
         nav {
+            padding-top: 1rem;
+
             ul {
                 li {
                     padding: 0 1.5rem;
@@ -92,20 +95,39 @@ header {
         display:flex;
         flex-direction: column;
         align-items:center;
-
-        img {
-            padding-top: .8rem;
-            padding-bottom: .4rem;
-        }
+        padding: 1rem 0;
 
         nav {
+            padding-top: 1rem;
+
             ul {
                 display:flex;
                 flex-direction:column;
+                align-items:center;
 
                 li {
                     padding: .4rem 0;
                 }
+            }
+        }
+    }
+}
+
+/**** MEDIA QUERIES FOR SMALLER LAPTOPS ****/
+@media only screen and (min-width: 993px) and (max-width: 1200px) {
+    header {
+        grid-template-columns: repeat(2, auto);
+
+        img {
+            grid-area: 1/1/2/2;
+        }
+
+        nav {
+            grid-area: 1/2/2/3;
+            
+            ul {
+                display:flex;
+                justify-content: space-between;
             }
         }
     }
