--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -180,7 +180,7 @@ footer nav ul li a {
     align-items: center;
   }
 }
-/**** CSS of index Villagers ****/
+/**** SCSS OF THE INDEX OF THE VILLAGERS ****/
 .all-villagers {
   background-color: #FAFAFA;
 }
@@ -207,13 +207,13 @@ footer nav ul li a {
 .all-villagers .villagers ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .all-villagers .villagers ul li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 1rem 1.2rem;
+  margin: 1rem;
   transition: transform 0.3s ease;
 }
 .all-villagers .villagers ul li img {
@@ -234,11 +234,9 @@ footer nav ul li a {
 
 /**** MEDIA QUERIES FOR SMARTPHONES ****/
 @media only screen and (max-width: 767px) {
-  .all-villagers .villagers ul {
-    justify-content: space-around;
-  }
   .all-villagers .villagers ul li {
     width: 30%;
+    margin: 0.6rem;
   }
 }
 /**** SCSS of a single villager ****/
@@ -363,6 +361,7 @@ footer nav ul li a {
     padding-right: 0.6rem;
   }
 }
+/**** SCSS FOR THE INDEX OF THE GAMES AND THE UPLOADER ****/
 .player-progress {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -385,7 +384,6 @@ footer nav ul li a {
   padding: 0.6rem 0.8rem;
   font-family: "Inconsolata", sans-serif;
   color: #FAFAFA;
-  font-size: 1.2rem;
   -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
           clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
 }
@@ -432,16 +430,23 @@ footer nav ul li a {
   justify-self: self-start;
 }
 .player-progress article.artifacts h4 {
-  font-size: 1.1rem;
-  text-align: center;
+  color: #FAFAFA;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto;
+  padding: 0.4rem 0.6rem;
+  background-color: #0CC09E;
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
 }
 .player-progress article.artifacts h4:first-of-type {
   grid-row: 1/2;
 }
 .player-progress article.artifacts ul {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   flex-wrap: wrap;
+  margin: 1rem 0;
 }
 .player-progress article.artifacts ul:first-of-type {
   grid-row: 2/3;
@@ -452,9 +457,6 @@ footer nav ul li a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #0CC09E;
-  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
 }
 .player-progress article.relationships {
   grid-area: 6/1/7/4;
@@ -505,6 +507,7 @@ footer nav ul li a {
          column-gap: 2rem;
   }
 }
+/**** SCSS FOR THE INDEX OF THE GAMES AND THE UPLOADER ****/
 .games h3 {
   margin-bottom: 1.5rem;
   font-size: 1.4rem;
@@ -846,7 +849,6 @@ html body main .title {
   padding: 0.6rem 0.8rem;
   font-family: "Inconsolata", sans-serif;
   color: #FAFAFA;
-  font-size: 1.2rem;
   -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
           clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
   cursor: pointer;
@@ -880,7 +882,10 @@ html body h2 {
 }
 html body h3 {
   margin-bottom: 1.5rem;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
+}
+html body h4 {
+  font-size: 1.3rem;
 }
 html body table {
   border-collapse: collapse;
