--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -47,7 +47,6 @@ html {
                 padding: 0.6rem .8rem;
                 font-family: $text-font;
                 color: $background-main;
-                font-size:1.2rem;
                 clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
                                         100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
                 cursor: pointer;
@@ -91,7 +90,11 @@ html {
 
         h3 {
             margin-bottom: 1.5rem;
-            font-size: 1.4rem;
+            font-size: 1.5rem;
+        }
+
+        h4 {
+            font-size: 1.3rem;
         }
 
         table {
