--- a/assets/styles/scss/users/_game.scss
+++ b/assets/styles/scss/users/_game.scss
@@ -1,3 +1,5 @@
+/**** SCSS FOR THE INDEX OF THE GAMES AND THE UPLOADER ****/
+
 .player-progress {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -20,7 +22,6 @@
             padding: 0.6rem .8rem;
             font-family: $text-font;
             color: $background-main;
-            font-size:1.2rem;
             clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
                                     100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
         }
@@ -77,8 +78,13 @@
             }
 
             h4 {
-                font-size: 1.1rem;
-                text-align:center;
+                color: $background-main;
+                width: fit-content;
+                margin: 0 auto;
+                padding: .4rem .6rem;
+                background-color: $green;
+                clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
+                                100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
 
                 &:first-of-type {
                     grid-row: 1/2;
@@ -87,8 +93,9 @@
 
             ul {
                 display:flex;
-                justify-content: space-evenly;
+                justify-content: space-around;
                 flex-wrap: wrap;
+                margin: 1rem 0;
 
                 &:first-of-type {
                     grid-row: 2/3;
@@ -100,9 +107,7 @@
                     display:flex;
                     flex-direction: column;
                     align-items: center;
-                    background-color: $green;
-                    clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
-                                    100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+                    
                 }
             }
         }
