--- a/templates/admin/layout.phtml
+++ b/templates/admin/layout.phtml
@@ -15,11 +15,8 @@
     <body class="admin-layout">
         <?php 
             require 'partials/_header.phtml';
+            require $template; 
         ?>
-
-        <main>
-            <?php require $template; ?>
-        </main>
 
         <script type="module" src="/res04-projet-soutenance/assets/js/index.js"></script>
     </body>
