--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -7,7 +7,7 @@
 @import 'users/game';
 @import 'users/my-games';
 @import 'users/my-account';
-@import 'forms/register';
+@import 'forms/forms';
 @import 'admin/partials/header';
 @import 'admin/homepage';
 @import 'admin/data';
