--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -798,13 +798,16 @@ form.register-login-edit input[type=submit]:hover {
   font-size: 1.2rem;
   padding: 0.8rem 0;
 }
+.admin-layout table thead th:last-of-type {
+  width: 25%;
+}
 .admin-layout table tbody tr {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
-.admin-layout table tbody td {
+.admin-layout table tbody tr td {
   padding: 0.5rem 0;
 }
-.admin-layout table tbody td input[type=submit] {
+.admin-layout table tbody tr td input[type=submit] {
   border: 1px solid #0CC09E;
   background-color: #0CC09E;
   font-family: "Inconsolata", sans-serif;
@@ -812,8 +815,12 @@ form.register-login-edit input[type=submit]:hover {
   padding: 0.3rem 0.5rem;
   cursor: pointer;
 }
-.admin-layout table tbody td input[type=submit]:hover {
+.admin-layout table tbody tr td input[type=submit]:hover {
   background-color: #FAFAFA;
+}
+.admin-layout table tbody tr td:last-of-type {
+  display: flex;
+  justify-content: space-between;
 }
 .admin-layout table tfoot td {
   padding: 0.8rem 0;
