--- a/templates/admin/users/users.phtml
+++ b/templates/admin/users/users.phtml
@@ -29,6 +29,10 @@
                                         <input type='hidden' name='user_id' id='user_id' value='".$user->getId()."'>
                                         <input type='submit' name='submit-delete-account-admin' id='submit-delete-account-admin' value='Delete'>
                                     </form>
+                                    <form action='/res04-projet-soutenance/admin/all-users' method='POST'>
+                                        <input type='hidden' name='user_id_role' id='user_id_role' value='".$user->getId()."'>
+                                        <input type='submit' name='submit-change-role' id='submit-change-role' value='Change the role'>
+                                    </form>
                                 </td>";
                             }
                         "</tr>";
