--- a/templates/admin/users/users.phtml
+++ b/templates/admin/users/users.phtml
@@ -30,8 +30,9 @@
                                         <input type='submit' name='submit-delete-account-admin' id='submit-delete-account-admin' value='Delete'>
                                     </form>
                                     <form action='/res04-projet-soutenance/admin/all-users' method='POST'>
-                                        <input type='hidden' name='user_id_role' id='user_id_role' value='".$user->getId()."'>
-                                        <input type='submit' name='submit-change-role' id='submit-change-role' value='Change the role'>
+                                        <input type='hidden' name='user_to_edit_id' id='user_to_edit_id' value='".$user->getId()."'>
+                                        <input type='hidden' name='user_role_id' id='user_role_id' value='1'>
+                                        <input type='submit' name='submit-change-role' id='submit-change-role' value='Change to admin'>
                                     </form>
                                 </td>";
                             }
