--- a/templates/admin/users/users.phtml
+++ b/templates/admin/users/users.phtml
@@ -17,8 +17,8 @@
                 foreach($data as $user)
                 {
                     echo 
-                        "<tr class='data-row'>
-                            <td class='data'>".$user->getUsername()."</td>
+                        "<tr class='data'>
+                            <td class='data-row'>".$user->getUsername()."</td>
                             <td>".$user->getEmail()."</td>
                             <td>".$user->getRole()->getName()."</td>";
                             if($user->getRole()->getName() === 'user')
@@ -29,10 +29,10 @@
                                         <input type='hidden' name='user_id' id='user_id' value='".$user->getId()."'>
                                         <input type='submit' name='submit-delete-account-admin' id='submit-delete-account-admin' value='Delete'>
                                     </form>
-                                    <form action='/res04-projet-soutenance/admin/all-users' method='POST'>
+                                    <form action='/res04-projet-soutenance/admin/all-users' method='POST' id='edit-the-role'>
                                         <input type='hidden' name='user_to_edit_id' id='user_to_edit_id' value='".$user->getId()."'>
                                         <input type='hidden' name='user_role_id' id='user_role_id' value='1'>
-                                        <input type='submit' name='submit-change-role' id='submit-change-role' value='Change to admin'>
+                                        <button type='submit' name='submit-change-role' id='submit-change-role'>Change to admin</button>
                                     </form>
                                 </td>";
                             }
