--- a/templates/admin/admin/edit.phtml
+++ b/templates/admin/admin/edit.phtml
@@ -1,7 +1,7 @@
 <main>
     <h2>Edit my informations</h2>
 
-    <form action="/res04-projet-soutenance/admin/edit" method="POST" class="register-login-edit">
+    <form action="/res04-projet-soutenance/admin/edit" method="POST" class="register-login-edit" id="edit-admin-form">
         <fieldset>
             <label for="new-username">New username</label>
             <input type="text" name="new-username" id="new-username">
