--- a/templates/admin/users/users.phtml
+++ b/templates/admin/users/users.phtml
@@ -1,4 +1,4 @@
-<main>
+<main class="all-users">
     <h2>All users</h2>
 
     <input type="search" id="search" name="search" placeholder="Search for a user" class="search-user">
