--- a/templates/admin/users/users.phtml
+++ b/templates/admin/users/users.phtml
@@ -32,7 +32,7 @@
                                     <form action='/res04-projet-soutenance/admin/all-users' method='POST' id='edit-the-role'>
                                         <input type='hidden' name='user_to_edit_id' id='user_to_edit_id' value='".$user->getId()."'>
                                         <input type='hidden' name='user_role_id' id='user_role_id' value='1'>
-                                        <button type='submit' name='submit-change-role' id='submit-change-role'>Change to admin</button>
+                                        <button name='submit-change-role' id='submit-change-role'>Change to admin</button>
                                     </form>
                                 </td>";
                             }
