--- a/assets/styles/scss/forms/_forms.scss
+++ b/assets/styles/scss/forms/_forms.scss
@@ -8,7 +8,7 @@ form {
 
         fieldset {
             display:grid;
-            grid-template-columns: auto 20rem;
+            grid-template-columns: auto auto 20rem;
             grid-template-rows: repeat(2, auto);
             grid-column-gap: 1.5rem;
             border: none;
@@ -16,13 +16,17 @@ form {
             padding: 0;
 
             label {
-                grid-area: 1/1/2/2;
+                grid-area: 1/1/2/3;
                 font-size: 1.2rem;
                 align-self:center;
+
+                &[for="password"] {
+                    grid-area: 1/1/2/2;
+                }
             }
 
             input {
-                grid-area: 1/2/2/3;
+                grid-area: 1/3/2/4;
                 justify-self: self-end;
                 width: 100%;
                 padding: .5rem 1rem;
@@ -42,9 +46,25 @@ form {
             }
 
             p {
-                grid-area: 2/1/3/3;
+                grid-area: 2/1/3/4;
                 font-size: .8rem;
                 color: $pink;
+
+                &.info {
+                    grid-area: 1/2/2/3;
+                    align-self: center;
+                    color: $text-color;
+                    font-size: $font-size-default;
+                    opacity: 0;
+
+                    &:hover {
+                        opacity: 1;
+                    }
+
+                    span {
+                        
+                    }
+                }
             }
         }
 
