--- a/templates/users/user/create.phtml
+++ b/templates/users/user/create.phtml
@@ -13,6 +13,7 @@
         </fieldset>
         <fieldset>
             <label for="password">Password</label>
+            <p class="info">? <span>The password has to include 1 uppercase letter, 1 number, 1 special character and at least 12 characters.</span></p>
             <input type="password" name="password" id="password">
             <p id="errorPassword"></p>
         </fieldset>
