--- a/templates/admin/users/users.phtml
+++ b/templates/admin/users/users.phtml
@@ -29,7 +29,7 @@
                                         <input type='hidden' name='user_id' id='user_id' value='".$user->getId()."'>
                                         <input type='submit' name='submit-delete-account-admin' id='submit-delete-account-admin' value='Delete'>
                                     </form>
-                                    <form action='/res04-projet-soutenance/admin/all-users' method='POST' id='edit-the-role'>
+                                    <form action='role-edit' method='POST' id='edit-the-role'>
                                         <input type='hidden' name='user_to_edit_id' id='user_to_edit_id' value='".$user->getId()."'>
                                         <input type='hidden' name='user_role_id' id='user_role_id' value='1'>
                                         <input type='submit' name='submit-change-role' id='submit-change-role' value='Change to admin'>
