--- a/templates/users/user/delete.phtml
+++ b/templates/users/user/delete.phtml
@@ -1,7 +1,7 @@
 <main>
     <h2>Delete my account</h2>
 
-    <form method="POST" action="/res04-projet-soutenance/my-account/delete">
+    <form method="POST" action="/res04-projet-soutenance/my-account/delete" class="forms">
         <p>Are you sure to delete your account ? This action is irreversible.</p>
         <input type="submit" value="Delete" name="submit-delete-account" id="submit-delete-account">
     </form>
