--- a/templates/users/villagers/index.phtml
+++ b/templates/users/villagers/index.phtml
@@ -8,6 +8,7 @@
     <input type="search" id="search" name="search" placeholder="Search for a villager" class="search">
 
     <article class="villagers">
+        <h3 class="hidden">All the villagers</h3>
         <ul>
         <?php
             foreach($villagers as $villager)
