--- a/assets/styles/scss/forms/_forms.scss
+++ b/assets/styles/scss/forms/_forms.scss
@@ -1,5 +1,5 @@
 form {
-    &.register-login-edit {
+    &.forms {
         display: grid;
         border: 2px dashed $pink;
         width: 40rem;
@@ -27,8 +27,8 @@ form {
 
             input {
                 grid-area: 1/3/2/4;
-                justify-self: self-end;
-                width: 100%;
+                justify-self: end;
+                width: 95%;
                 padding: .5rem 1rem;
                 border: 1px solid $green;
                 background-color: rgba(12,192,158, .4);
@@ -53,12 +53,30 @@ form {
                 &.info {
                     grid-area: 1/2/2/3;
                     align-self: center;
+                    justify-self: end;
+                    width: fit-content;
                     color: $text-color;
                     font-size: $font-size-default;
-                    opacity: 0;
+                    position: relative;
+                    background-color: $green;
+                    padding: .3rem .5rem;
+
+                    span {
+                        font-size: .9rem;
+                        visibility: hidden;
+                        width: 10rem;
+                        background-color: $text-color;
+                        color: $background-body;
+                        text-align: center;
+                        padding: .5rem;
+                        position: absolute;
+                        z-index: 1;
+                    }
 
                     &:hover {
-                        opacity: 1;
+                        span {
+                            visibility: visible;
+                        }
                     }
                 }
             }
