--- a/templates/users/user/create.phtml
+++ b/templates/users/user/create.phtml
@@ -1,26 +1,26 @@
 <main>
     <h2>Register</h2>
-    <form method="POST" action="/res04-projet-soutenance/register" id="register-form" class="register-login-edit">
+    <form method="POST" action="/res04-projet-soutenance/register" id="register-form" class="forms">
         <fieldset>
             <label for="username">Username</label>
             <input type="text" name="username" id="username">
-            <p id="errorUsername"></p>
+            <p class="errorUsername"></p>
         </fieldset>
         <fieldset>
             <label for="email">Email</label>
             <input type="email" name="email" id="email">
-            <p id="errorEmail"></p>
+            <p class="errorEmail"></p>
         </fieldset>
         <fieldset>
             <label for="password">Password</label>
             <p class="info">? <span>The password has to include 1 uppercase letter, 1 number, 1 special character and at least 12 characters.</span></p>
             <input type="password" name="password" id="password">
-            <p id="errorPassword"></p>
+            <p class="errorPassword"></p>
         </fieldset>
         <fieldset>
             <label for="confirm-password">Confirm the password</label>
             <input type="password" name="confirm-password" id="confirm-password">
-            <p id="errorConfirmPassword"></p>
+            <p class="errorConfirmPassword"></p>
         </fieldset>
 
         <input type="submit" name="submit-new-user" id="submit-new-user" value="Register">
