Added an accessibility menu

--- a/templates/users/staticpages/homepage.phtml
+++ b/templates/users/staticpages/homepage.phtml
@@ -1,5 +1,10 @@
 <main class="homepage">
-    <section class="presentation">
+    <div class="accessibility">
+        <a href="#presentation">Presentation</a>
+        <a href="#tutorial">Tutorial</a>
+    </div>
+    
+    <section id="presentation" class="presentation">
         <h2>Presentation</h2>
         <img src="/res04-projet-soutenance/assets/images/NightMarket.png" alt="Picture of the market on the port in Stardew Valley"/>
         <p>
@@ -10,7 +15,7 @@
         </p>
     </section>
 
-    <section class="find-file">
+    <section id="tutorial" class="find-file">
         <h2>Where to find your file</h2>
         <p>
             First, you need to create an account to be able to upload your file. When logged in, go to <a href="/res04-projet-soutenance/my-games">my games</a> to find the uploader and follow the instructions below, depending on which plateform you play. The file is named <code>NameOfYourFarm_123456789</code>. This is the one you want to upload.
