--- a/templates/users/user/game.phtml
+++ b/templates/users/user/game.phtml
@@ -1,4 +1,16 @@
 <main class="player-progress">
+    <div class="accessibility">
+        <a href="#player">Player</a>
+        <a href="#skills">Skills</a>
+        <a href="#equipment">Equipment</a>
+        <a href="#books">Books</a>
+        <a href="#statistics">Statistics</a>
+        <a href="#bundles">Bundles</a>
+        <a href="#artifacts">Artifacts</a>
+        <a href="#relationships">Relationships</a>
+        <a href="#locations">Locations</a>
+    </div>
+
     <h2>Your farm</h2>
     <?php
         require 'game_partials/_player.phtml'; 
