--- a/templates/users/user/game_partials/_possessedItems.phtml
+++ b/templates/users/user/game_partials/_possessedItems.phtml
@@ -1,4 +1,4 @@
-<article class="possessed-items">
+<article id="equipment" class="possessed-items">
     <?php
         $player = $data['possessedItems'];
     ?>
