--- a/templates/users/user/game_partials/_relationships.phtml
+++ b/templates/users/user/game_partials/_relationships.phtml
@@ -1,4 +1,4 @@
-<article class="relationships">
+<article id="relationships" class="relationships">
     <?php
         $player = $data['relationships'];
     ?>
