--- a/templates/users/villagers/villager.phtml
+++ b/templates/users/villagers/villager.phtml
@@ -5,6 +5,13 @@
 ?>
 
 <main class="villager">
+    <div class="accessibility">
+        <a href=#general>General</a>
+        <a href=#events>Events</a>
+        <a href=#gifts>Gifts</a>
+        <a href=#planning>Schedule</a>
+    </div>
+
     <h2><?= $villager->getName() ;?></h2>
 
     <article class="single-villager">
