--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -15,6 +15,7 @@
 
 html {
     font-size:16px;
+    scroll-behavior: smooth;
 
     body {
         font-family : $text-font;
@@ -99,6 +100,23 @@ html {
 
         table {
             border-collapse: collapse;
+        }
+
+        .accessibility {
+            a {
+                padding: .6rem;
+                color: $text-color;
+                background-color: $green;
+                opacity: 0;
+                position: absolute;
+                top: -1000px;
+                left: 0;
+
+                &:focus {
+                    opacity: 1;
+                    top:8rem;
+                }
+            }
         }
     }
 }
