--- a/assets/styles/scss/users/_game.scss
+++ b/assets/styles/scss/users/_game.scss
@@ -140,6 +140,14 @@
                         &:hover {
                             transform: scale(1.15);
                         }
+
+                        p {
+                            span {
+                                color: $pink;
+                                font-weight: bolder;
+                                font-size: 1.3rem;
+                            }
+                        }
                     }
                 }
             }
