--- a/assets/styles/scss/_vars.scss
+++ b/assets/styles/scss/_vars.scss
@@ -8,3 +8,7 @@ $font-size-default: 1rem;
 
 $title-font : "Chakra Petch", sans-serif;
 $text-font : "Inconsolata", sans-serif;
+
+// Colors for the dark-mode
+$background-body-dark: #050314;
+$background-main-dark: #0c092b;
