--- a/templates/users/partials/_header.phtml
+++ b/templates/users/partials/_header.phtml
@@ -40,6 +40,9 @@
             <?php
                 }
             ?>
+            <li>
+                <button class="dark"></button>
+            </li>
         </ul>
     </nav>
 </header>
