--- a/templates/users/staticpages/confidentiality.phtml
+++ b/templates/users/staticpages/confidentiality.phtml
@@ -1,4 +1,4 @@
-<main>
+<main class="staticpages">
     <h2>Privacy Policy for Farming Companion</h2>
     <section>
         <h3>Information collection</h3>
