--- a/templates/users/staticpages/credits.phtml
+++ b/templates/users/staticpages/credits.phtml
@@ -1,4 +1,4 @@
-<main>
+<main class="staticpages">
     <!-- Credit ConcernedApe and the wiki associated to Stardew Valley -->
     <h2>Credits</h2>
     <section>
