--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -56,6 +56,20 @@ header nav ul li form input {
 header nav ul li form input:hover {
   filter: saturate(0);
 }
+header nav ul li button {
+  width: 3rem;
+  height: 3rem;
+  padding: 0.8rem 1.2rem;
+  border: none;
+  background-image: url("/res04-projet-soutenance/assets/images/moon.png");
+  background-position: center center;
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-color: #FAFAFA;
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+  cursor: pointer;
+}
 
 /**** MEDIA QUERIES FOR TABLETS ****/
 @media only screen and (min-width: 768px) and (max-width: 992px) {
@@ -225,7 +239,6 @@ footer nav ul li a {
 }
 .all-villagers .villagers ul li a {
   text-decoration: none;
-  color: #0C092B;
   margin-top: 0.2rem;
 }
 .all-villagers .villagers ul li:hover {
@@ -872,6 +885,7 @@ html {
 html body {
   font-family: "Inconsolata", sans-serif;
   font-size: 1rem;
+  color: #0C092B;
   background-color: #D9D9D9;
   padding: 0;
   margin: 0;
@@ -905,6 +919,9 @@ html body main .title.button-focus {
   font-weight: bolder;
   -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
           clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+}
+html body main.staticpages section {
+  margin-top: 1.6rem;
 }
 html body a {
   text-decoration: none;
@@ -950,6 +967,33 @@ html body .accessibility a {
 html body .accessibility a:focus {
   opacity: 1;
   top: 8rem;
+}
+html body.dark-mode {
+  background-color: #050314;
+  color: #FAFAFA;
+}
+html body.dark-mode header nav ul li a {
+  background-color: #0c092b;
+  color: #FAFAFA;
+}
+html body.dark-mode header nav ul li button {
+  background-image: url("/res04-projet-soutenance/assets/images/sun.png");
+}
+html body.dark-mode main {
+  background-color: #0c092b;
+  box-shadow: inset 0.3rem 0px 0px 0px rgba(5, 3, 20, 0.6), inset -0.3rem 0px 0px 0px rgba(5, 3, 20, 0.6), inset 0.6rem 0px 0px 0px rgba(5, 3, 20, 0.4), inset -0.6rem 0px 0px 0px rgba(5, 3, 20, 0.4);
+}
+html body.dark-mode main a {
+  color: #D9D9D9;
+}
+html body.dark-mode main .search {
+  background-color: rgba(214, 30, 146, 0.4);
+}
+html body.dark-mode main .search::-moz-placeholder {
+  color: #D9D9D9;
+}
+html body.dark-mode main .search::placeholder {
+  color: #D9D9D9;
 }
 
 /**** MEDIA QUERIES FOR TABLETS ****/
