--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -20,6 +20,7 @@ html {
     body {
         font-family : $text-font;
         font-size : $font-size-default;
+        color: $text-color;
         background-color: $background-body;
         padding: 0;
         margin : 0;
@@ -59,6 +60,12 @@ html {
                                     100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
                 }
                 
+            }
+
+            &.staticpages {
+                section {
+                    margin-top: 1.6rem;
+                }
             }
         }
 
@@ -115,6 +122,47 @@ html {
                 &:focus {
                     opacity: 1;
                     top:8rem;
+                }
+            }
+        }
+
+        &.dark-mode {
+            background-color: $background-body-dark;
+            color: $background-main;
+
+            header {
+                nav {
+                    ul {
+                        li {
+                            a {
+                                background-color: $background-main-dark;
+                                color: $background-main;
+                            }
+
+                            button {
+                                background-image: url('/res04-projet-soutenance/assets/images/sun.png');
+                            }
+                        }
+                    }
+                }
+            }
+
+            main {
+                background-color: $background-main-dark;
+                box-shadow: inset .3rem 0px 0px 0px rgba(5,3,20,0.6),
+                            inset -.3rem 0px 0px 0px rgba(5,3,20,0.6),
+                            inset .6rem 0px 0px 0px rgba(5,3,20,0.4),
+                            inset -.6rem 0px 0px 0px rgba(5,3,20,0.4);
+
+                a {
+                    color: $background-body;
+                }
+
+                .search {
+                    background-color: rgba(214, 30, 146, 0.4);;
+                    &::placeholder {
+                        color: $background-body;
+                    }
                 }
             }
         }
