--- a/assets/styles/scss/users/partials/_header.scss
+++ b/assets/styles/scss/users/partials/_header.scss
@@ -63,6 +63,21 @@ header {
                         }
                     }
                 }
+
+                button {
+                    width: 3rem;
+                    height: 3rem;
+                    padding: .8rem 1.2rem;
+                    border: none;
+                    background-image: url('/res04-projet-soutenance/assets/images/moon.png');
+                    background-position: center center;
+                    background-size: 80%;
+                    background-repeat: no-repeat;
+                    background-color: $background-main;
+                    clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
+                                    100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+                    cursor: pointer;
+                }
             }
         }
     }
