--- a/templates/users/layout.phtml
+++ b/templates/users/layout.phtml
@@ -12,7 +12,7 @@
         <link href="/res04-projet-soutenance/assets/styles/scss/style.css" rel="stylesheet">
         <title>Farming Companion</title>
     </head>
-    <body>
+    <body class="user-layout">
         <?php
             require 'partials/_header.phtml';
         ?>
