--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -141,6 +141,7 @@ html {
 
                             button {
                                 background-image: url('/res04-projet-soutenance/assets/images/sun.png');
+                                background-color: $background-main-dark;
                             }
                         }
                     }
