The fetch doesn't work

--- a/templates/users/user/games.phtml
+++ b/templates/users/user/games.phtml
@@ -3,7 +3,7 @@
     <section>
         <h3>Add your file</h3>
         <p>If you don't know which file to upload, go to the homepage, a tutorial is provided !</p>
-        <form enctype="multipart/form-data" method="POST" action="list-games" id="file-upload">
+        <form enctype="multipart/form-data" method="POST" action="my-games" id="file-upload">
             <label for="saved-file">Upload your file</label> 
             <input type="hidden" name="MAX_FILE_SIZE" value="10000000">
             <input type="file" name="saved-file" id="saved-file" value="Choose a file"> <!-- Hide it in css -->
